[gd_scene load_steps=6 format=1]

[ext_resource path="res://scene/Item.gd" type="Script" id=1]
[ext_resource path="res://image/fruit_2.png" type="Texture" id=2]
[ext_resource path="res://image/spark_particle.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 30.0

[sub_resource type="Animation" id=2]

resource/name = "fade_out"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }

[node name="Item" type="Area2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( -1.80499, -9.02499 )
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="AnimPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fade_out = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Particles" type="Particles2D" parent="."]

config/amount = 24
config/lifetime = 1.0
config/emit_timeout = 1.0
config/emitting = false
config/half_extents = Vector2( 10, 10 )
config/explosiveness = 0.1
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 40.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[connection signal="body_enter" from="." to="." method="_on_Item_body_enter"]

[connection signal="body_exit" from="." to="." method="_on_Item_body_exit"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="finished" from="AnimPlayer" to="." method="_on_AnimPlayer_finished"]


